--- a/_includes/author-box.html
+++ b/_includes/author-box.html
@@ -11,8 +11,11 @@
       {% endif %}
       {% if site.phone %}
         <li class="phone"><a href="tel:{{site.phone}}"><i class="fa fa-phone"></i></a></li>
+     {% endif %}
+     {% if site.github %}
+        <li class="github"><a href="http://github.com/{{site.github}}" target="_blank"><i class="fa fa-github"></i></a></li>
       {% else %}
-        <li class="phone"><a href="tel:044 825 5523"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
+        <li class="github"><a href="http://github.com/eldraco19" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
       {% endif %}
       {% if site.website %}
         <li class="website"><a href="http://{{site.website}}" target="_blank"><i class="fa fa-globe"></i></a></li>
